# pyxrel

./: .deepsource.toml  .gitignore  README.md  pyproject.toml
pyxrel/: __init__.py  api.py  constants.py  exceptions.py  models.py  oauth2.py  session.py  types.py  utils.py
pyxrel/resources/: __init__.py  calendar.py  extinfo.py  release.py  resource.py  search.py
