[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyxrel"
version = "1.0.0"
description = "A Python implementation of the official xREL API"
license = "GPL-3.0-only"
authors = ["u2ly <76696f6c@proton.me>"]
readme = "README.md"
repository = "https://github.com/u2ly/pyxrel"
keywords = ["xrel", "xrel-api", "python"]
include = [
    { path = "README.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.31.0"
pydantic = "^2.6.2"
lxml = "^5.1.0"
